pyo3-stub-gen-derive/tests/failing_cases/gen_function_invalid_syntax.rs
use pyo3_stub_gen_derive::gen_function_from_python;

fn main() {
    pyo3_stub_gen::inventory::submit! {
        gen_function_from_python! {
            r#"
            def foo(x: int -> int:  # Invalid syntax: missing closing paren
            "#
        }
    }
}
